# ccsd-hehp-cpp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  MpiClass.h  ParameterClass.h  ParameterClass_NoJson.h  README.md  VectorsClass.h  aux_test_build.sh  ccsd_code.cpp  config.json
.claude/: CLAUDE.md
.claude/agents/: ccsd-reviewer.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  ccsd_bench.cpp  ccsd_code.cpp  run_bench.sh
benchmarks/: plot_or_table.py  run_bench.sh
cmake/: ProjectWarnings.cmake  ccsd_mdspan.cmake
docs/: usage.md  workflow.md
docs/benchmarks/: methodology.md  pass-2-results.md  profile-baseline.md  profile-baseline.txt
docs/design/plans/: 2026-05-07-pass-2-perf.md
docs/design/specs/: 2026-05-07-modernize-pass-1-design.md
docs/guides/: architecture.md  build.md
docs/superpowers/plans/: 2026-05-07-modernize-pass-1.md
docs/superpowers/specs/: 2026-05-07-modernize-pass-1-design.md  2026-05-07-pass-2-perf-design.md
include/ccsd/: ccsd_constants.h  ccsd_kernels.h  ccsd_solver.h  ccsd_solver.hpp  ccsd_state.h  mpi_orchestrator.h  mpi_session.h  mpi_tensor.h  mpi_tensor.hpp  parameters.h  tensors.h  tensors.hpp  timer.h  timing.hpp
scripts/: migrate_config.py  run_bench.sh
src/: CMakeLists.txt  ccsd_kernels.cpp  ccsd_solver.cpp
src/apps/: CMakeLists.txt  ccsd_bench.cpp  ccsd_code.cpp
src/apps/scripts/: run_bench.sh
src/ccsd/: CMakeLists.txt
src/ccsd/config/: CMakeLists.txt
src/ccsd/config/tests/: test_config.cpp
src/ccsd/kernels/: ccsd_kernels.cpp  ccsd_kernels.h  ccsd_state.h
src/ccsd/kernels/tests/: CMakeLists.txt  test_kernels.cpp  test_math_helpers.cpp
src/ccsd/mpi/: CMakeLists.txt  orchestrator.h  tensor_ops.h
src/ccsd/solver/: CMakeLists.txt  ccsd_solver.cpp  ccsd_solver.h
src/config/tests/: CMakeLists.txt  test_config.cpp
src/kernels/: CMakeLists.txt  ccsd_kernels.cpp  ccsd_kernels.h  ccsd_state.h
src/kernels/tests/: test_kernels.cpp  test_math_helpers.cpp
src/mpi/: orchestrator.h  session.h  tensor_ops.h
src/solver/: ccsd_solver.cpp  ccsd_solver.h
src/tensors/: mdspan_view.h  vector_2d.h
src/tensors/tests/: test_tensors.cpp
src/timing/: CMakeLists.txt
src/timing/tests/: CMakeLists.txt  test_percentile.cpp  test_timer.cpp
src/util/: CMakeLists.txt
src/util/tensors/: CMakeLists.txt  mdspan_view.h  vector_4d.h
src/util/tensors/tests/: CMakeLists.txt  test_tensors.cpp
src/util/timing/: percentile.h  timer.h
src/util/timing/tests/: test_percentile.cpp  test_timer.cpp
tests/: CMakeLists.txt  run_mpi_regression.py  test_kernels.cpp  test_math_helpers.cpp  test_parameters.cpp  test_tensors.cpp  test_timer.cpp  test_timing.cpp
